--- a/index.html
+++ b/index.html
@@ -1,11 +1,1 @@
-<!doctype html>
-<html>
-	<head>
-		<meta charset="utf-8">
-		<title>React Kawaii</title>
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	</head>
-	<body>
-		<div id="app"></div>
-	<script type="text/javascript" src="build/bundle.6740cbe5.js"></script></body>
-</html>
+<!DOCTYPE html><html><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"><meta http-equiv="X-UA-Compatible" content="ie=edge"><title>React Kawaii</title></head><body><div id="rsg-root"></div><script src="build/bundle.4ef3c94c.js"></script></body></html>
